[package]
name = "tokio-command-fds"
version = "0.2.1"
edition = "2018"
authors = ["Andrew Walbran <qwandor@google.com>"]
license = "Apache-2.0"
description = "A library for passing arbitrary file descriptors when spawning child processes."
repository = "https://github.com/google/command-fds/"
keywords = ["command", "process", "child", "subprocess", "fd"]
categories = ["os::unix-apis"]

[dependencies]
nix = ">=0.22"
thiserror = "^1"
tokio = { version = "^1", features = ["process"] }

[dev-dependencies]
tokio = { version = "^1", features = ["process", "rt", "macros"] }
lazy_static = "*"
